# spotify-matcher

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml
nginx/: default.conf
spotify_matcher/: matcher.py
spotify_matcher/flaskr/: __init__.py  auth.py  db.py  invitation.py  schema.sql  scripts.sql  tasks.py
spotify_matcher/flaskr/static/: style.css
spotify_matcher/flaskr/templates/: base.html
spotify_matcher/flaskr/templates/auth/: login.html
spotify_matcher/flaskr/templates/invitation/: accepted.html  detail.html  index.html  list.html
tests/: test_spotify_matcher.py
