[tool.poetry]
name = "spotify-matcher"
version = "0.1.0"
description = ""
authors = ["Simeon Králik <simeon.kralik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.22.0"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
serve  = "flask --app spotify_matcher.flaskr.api:app --debug run --port 8080"